<resources>
    <string name="app_name">TakeHomeAssignment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="calculate">Calculate</string>
    <string name="shipment">Shipment</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="in_transit">In Transit</string>
    <string name="cancelled">Cancelled</string>
    <string name="incomplete">Incomplete</string>
    <string name="pending_order">Pending Order</string>
    <string name="loading">Loading</string>
    <string name="status_description">Status Description</string>
    <string name="status_update">Status Update</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="enter_the_receipt_number">Enter the receipt number...</string>
    <string name="time">Time</string>
    <string name="ocean_freight">Ocean freight</string>
    <string name="cargo_freight">Cargo Freight</string>
    <string name="international">International</string>
    <string name="reliable">Reliable</string>
    <string name="air_freight">Air freight</string>
    <string name="local_freight">Local freight</string>
    <string name="local">Local</string>
    <string name="add_stop">+ Add Stop</string>
    <string name="your_location">Your Location</string>
    <string name="wertheimer_illinois">Wertheimer, Illinois</string>
    <string name="tayyab_ejaz">Tayyab Ejaz</string>
    <string name="principal_android_engineer">Princiapl Android Engineer</string>
</resources>